# SmartScope

./: .gitignore  CMakeLists.txt  init_full.ps1
.github/workflows/: build.yml
src/: DataEngine.cpp  DataEngine.h  MainWindow.cpp  MainWindow.h  OscilloscopeWidget.cpp  OscilloscopeWidget.h  SmartUSBHub.cpp  SmartUSBHub.h  TriggerEngine.cpp  TriggerEngine.h  main.cpp
